--- a/about/src/styles/global.css
+++ b/about/src/styles/global.css
@@ -8,4 +8,5 @@ body {
     flex-direction: column;
     align-items: center;
     background-color: #161B22;
+    font-family: "Work Sans", sans-serif;
 }
