ADD Hero Component

--- a/about/src/styles/global.css
+++ b/about/src/styles/global.css
@@ -7,6 +7,6 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #161B22;
+    background-color: #0D1117;
     font-family: "Work Sans", sans-serif;
 }
